Use getFirst instead of get(0) in GroupsFactoryTest